@@ -59,6 +59,7 @@ PHP_FUNCTION(ingres2_field_length);
 PHP_FUNCTION(ingres2_field_precision);
 PHP_FUNCTION(ingres2_field_scale);
 PHP_FUNCTION(ingres2_fetch_array);
+PHP_FUNCTION(ingres2_fetch_assoc);
 PHP_FUNCTION(ingres2_fetch_row);
 PHP_FUNCTION(ingres2_fetch_object);
 PHP_FUNCTION(ingres2_rollback);
@@ -99,6 +100,7 @@ PHP_FUNCTION(ingres_field_length);
 PHP_FUNCTION(ingres_field_precision);
 PHP_FUNCTION(ingres_field_scale);
 PHP_FUNCTION(ingres_fetch_array);
+PHP_FUNCTION(ingres_fetch_assoc);
 PHP_FUNCTION(ingres_fetch_row);
 PHP_FUNCTION(ingres_fetch_object);
 PHP_FUNCTION(ingres_rollback);
